--- a/import.css
+++ b/import.css
@@ -623,20 +623,16 @@ display: flex;
     gap: 8px;
     align-items: center;
 }
-.body .container .topsection .topsection-container .wallet .wallet-container .bottom #butt{
-    background-color: var(--primary-color) !important;
-    outline: none !important;
-    border: none !important;
-    width: 280px !important;
-    height: 45px !important;
-    border-radius: 4px !important;
-    color: white !important;
-    font-size: 16px !important;
-    cursor: pointer !important;
-    -webkit-appearance: none;
-    -webkit-appearance: none;
--moz-appearance: none;
-appearance: none;
+.body .container .topsection .topsection-container .wallet .wallet-container .bottom input[type="submit"]{
+    background-color: var(--primary-color);
+    outline: none;
+    border: none;
+    width: 280px;
+    height: 45px;
+    border-radius: 4px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
 }
 
 
