--- a/wallet.css
+++ b/wallet.css
@@ -8,7 +8,7 @@
     padding: 0;
 }
 :root{
-    --primary-color: #c60021;
+    --primary-color: #c75688;
     --green-color:#08833d;
     --blue-color:#0b0c10;
 }
@@ -388,7 +388,7 @@ body{
 
 }
 .navbar2 .navbar2-container .leftside img{
-    width:180px;
+    width:60px;
     transition: ease-in-out 0.5s;
 }
 .navbar2 .navbar2-container .rightside nav ul{
@@ -478,9 +478,10 @@ body{
 .header .container .middlepart p{
     color: white;
     font-weight: 500;
-    font-size: 17px;
+    font-size: 20px;
     line-height: 1.3;
     margin-bottom: 25px;
+    text-align: center;
 }
 .header .container .middlepart button{
     background-color: var(--primary-color);
@@ -875,7 +876,7 @@ animation: roundd 5s infinite;
     gap: 20px;  
 }
 .footer .footer-container .footer-leftpart img {
-    width: 180px; 
+    width: 60px; 
 }
 .footer .footer-container .footer-leftpart p{
     color: var(--blue-color);
@@ -1105,7 +1106,7 @@ animation: roundd 5s infinite;
     
     }
     .navbar2 .navbar2-container .leftside  img{
-        width: 180px;
+        width: 60px;
     }
     .navbar2 .navbar2-container .rightside nav ul{
         display: flex;
@@ -1331,7 +1332,7 @@ animation: roundd 5s infinite;
     margin-right: 2rem;
 }
 .footer .footer-container .footer-leftpart img {
-    width: 150px; 
+    width: 60px; 
 }
 .footer .footer-container .footer-leftpart p{
     color: var(--blue-color);
@@ -1464,7 +1465,7 @@ animation: roundd 5s infinite;
         margin-right: .5rem;
     }
     .navbar2 .navbar2-container .leftside  img{
-        width: 180px;
+        width: 60px;
     }
     .navbar2 .navbar2-container .rightside nav ul{
         width: 100%;
@@ -1609,7 +1610,7 @@ animation: roundd 5s infinite;
         z-index: 100000;
     }
     .navbar2 .navbar2-container .leftside  img{
-        width: 180px;
+        width: 60px;
         margin-left: 0;
     }
 
